; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/gfs2/extr_inode.c_gfs2_iget.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/gfs2/extr_inode.c_gfs2_iget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.super_block = type { i32 }
%struct.gfs2_skip_data = type { i32, i64, i64 }

@iget_test = common dso_local global i32 0, align 4
@iget_set = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.inode* (%struct.super_block*, i64, i32)* @gfs2_iget to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.inode* @gfs2_iget(%struct.super_block* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.super_block*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.gfs2_skip_data, align 8
  %8 = alloca i64, align 8
  store %struct.super_block* %0, %struct.super_block** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i64, i64* %5, align 8
  store i64 %9, i64* %8, align 8
  %10 = load i64, i64* %5, align 8
  %11 = getelementptr inbounds %struct.gfs2_skip_data, %struct.gfs2_skip_data* %7, i32 0, i32 2
  store i64 %10, i64* %11, align 8
  %12 = getelementptr inbounds %struct.gfs2_skip_data, %struct.gfs2_skip_data* %7, i32 0, i32 1
  store i64 0, i64* %12, align 8
  %13 = load i32, i32* %6, align 4
  %14 = getelementptr inbounds %struct.gfs2_skip_data, %struct.gfs2_skip_data* %7, i32 0, i32 0
  store i32 %13, i32* %14, align 8
  %15 = load %struct.super_block*, %struct.super_block** %4, align 8
  %16 = load i64, i64* %8, align 8
  %17 = load i32, i32* @iget_test, align 4
  %18 = load i32, i32* @iget_set, align 4
  %19 = call %struct.inode* @iget5_locked(%struct.super_block* %15, i64 %16, i32 %17, i32 %18, %struct.gfs2_skip_data* %7)
  ret %struct.inode* %19
}

declare dso_local %struct.inode* @iget5_locked(%struct.super_block*, i64, i32, i32, %struct.gfs2_skip_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
